# f3rva-workout-service

./: .env.example  LICENSE  README.md  lambda_handler.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
app/: main.py
app/api/: workouts.py
app/core/: config.py  database.py
app/models/: workout.py
app/services/: workout_service.py
deployment/: cdk_stack.py
tests/unit/: test_api.py  test_database.py  test_models.py  test_workout_service.py
